--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
+    "serverless-http": "^3.2.0",
     "uuid": "^9.0.0"
   }
 }
