--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DBCONFIG=mongodb+srv://pasindumendis97:txxDwxX1kW6SA59B@maindb.fxnfe6r.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=blogApp10986$3Test725625
+APPPORT=4000
