--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ceylon-handicraft-backend",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Handicraft Ecom project",
-  "main": "api.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/api.js",
     "start": "netlify-lambda serve src",
@@ -12,21 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "config": "^3.3.9",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0",
-    "joi": "^17.10.2",
-    "jsonwebtoken": "^9.0.1",
-   "mongoose": "^5.13.17",
-    "netlify-lambda": "^2.0.16",
-    "nodemailer": "^6.9.4",
-    "serverless-http": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.17",
+    "netlify-lambda": "^2.0.15",
+    "nodemon": "^2.0.20",
+    "serverless-http": "^3.1.0",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
